--- a/MilindBirthday/index.html
+++ b/MilindBirthday/index.html
@@ -83,18 +83,18 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="../Images/Image11.jpeg" class="image filtered span-3" data-position="bottom"><img src="../Images/Image11.jpeg" alt="" /></a>
-										<a href="../Images/Image1.jpeg" class="image filtered span-1-5" data-position="center"><img src="../Images/Image1.jpeg" alt="" /></a>
-										<a href="../Images/Image3.jpeg" class="image filtered span-1-5" data-position="bottom"><img src="../Images/Image3.jpeg" alt="" /></a>
+										<a href="./images/Image11.jpeg" class="image filtered span-3" data-position="bottom"><img src="./images/Image11.jpeg" alt="" /></a>
+										<a href="../Images/Image1.jpeg" class="image filtered span-1-5" data-position="center"><img src="./images/Image1.jpeg" alt="" /></a>
+										<a href="../Images/Image3.jpeg" class="image filtered span-1-5" data-position="bottom"><img src="./images/Image3.jpeg" alt="" /></a>
 									</div>
-									<a href="../Images/Iimage2.jpeg" class="image filtered span-2-5" data-position="top"><img src="../Images/Iimage2.jpeg" alt="" /></a>
+									<a href="./images/Iimage2.jpeg" class="image filtered span-2-5" data-position="top"><img src="./images/Iimage2.jpeg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="../Images/Image5.jpeg" class="image filtered span-3" data-position="top"><img src="../Images/Image5.jpeg" alt="" /></a>
-										<a href="../Images/Image8.jpeg" class="image filtered span-1-5" data-position="center"><img src="../Images/Image8.jpeg" alt="" /></a>
-										<a href="../Images/Image7.jpeg" class="image filtered span-1-5" data-position="bottom"><img src="../Images/Image7.jpeg" alt="" /></a>
-										<a href="../Images/Image10.jpeg" class="image filtered span-3" data-position="top"><img src="../Images/Image10.jpeg" alt="" /></a>
+										<a href="./images/Image5.jpeg" class="image filtered span-3" data-position="top"><img src="./images/Image5.jpeg" alt="" /></a>
+										<a href="./images/Image8.jpeg" class="image filtered span-1-5" data-position="center"><img src="./images/Image8.jpeg" alt="" /></a>
+										<a href="./images/Image7.jpeg" class="image filtered span-1-5" data-position="bottom"><img src="./images/Image7.jpeg" alt="" /></a>
+										<a href="./images/Image10.jpeg" class="image filtered span-3" data-position="top"><img src="./images/Image10.jpeg" alt="" /></a>
 									</div>
-									<a href="../Images/Image4.jpeg" class="image filtered span-2-5" data-position="right"><img src="../Images/Image4.jpeg" alt="" /></a>
+									<a href="./images/Image4.jpeg" class="image filtered span-2-5" data-position="right"><img src="./images/Image4.jpeg" alt="" /></a>
 								</div>
 							</section>
 
