--- a/MilindBirthday/index.html
+++ b/MilindBirthday/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Milind<br />
 									Fashionista House</h1>
-									<p>This is <strong>MFH</strong>, a webpage <a href="https://html5up.net">owned by Mr. Milind Raj (CEO @MFH )</a>. Famously known by the names Masala Ka Dabba, Ae Yeda, Aata Manager, So, Chomu Chapet, Perman, Aya Bada, Pepsi ka can etc etc, MFH presents before you a variety of fashionista clothing ideas that you can use during your college days. We hope you dig it :)</p>
+									<p>This is <strong>MFH</strong>, a webpage <a href="https://www.linkedin.com/in/milind-raj-a452991a5/">owned by Mr. Milind Raj (CEO @MFH )</a>. Famously known by the names Masala Ka Dabba, Ae Yeda, Aata Manager, So, Chomu Chapet, Perman, Aya Bada, Pepsi ka can etc etc, MFH presents before you a variety of fashionista clothing ideas that you can use during your college days. We hope you dig it :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -83,16 +83,16 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="./images/Image11.jpeg" class="image filtered span-3" data-position="bottom"><img src="./images/Image11.jpeg" alt="" /></a>
+										<a href="./images/Image12.jpeg" class="image filtered span-3" data-position="bottom"><img src="./images/Image12.jpeg" alt="" /></a>
 										<a href="../Images/Image1.jpeg" class="image filtered span-1-5" data-position="center"><img src="./images/Image1.jpeg" alt="" /></a>
-										<a href="../Images/Image3.jpeg" class="image filtered span-1-5" data-position="bottom"><img src="./images/Image3.jpeg" alt="" /></a>
+										<a href="../Images/Image13.jpeg" class="image filtered span-1-5" data-position="bottom"><img src="./images/Image13.jpeg" alt="" /></a>
 									</div>
 									<a href="./images/Iimage2.jpeg" class="image filtered span-2-5" data-position="top"><img src="./images/Iimage2.jpeg" alt="" /></a>
 									<div class="group span-4-5">
 										<a href="./images/Image5.jpeg" class="image filtered span-3" data-position="top"><img src="./images/Image5.jpeg" alt="" /></a>
 										<a href="./images/Image8.jpeg" class="image filtered span-1-5" data-position="center"><img src="./images/Image8.jpeg" alt="" /></a>
 										<a href="./images/Image7.jpeg" class="image filtered span-1-5" data-position="bottom"><img src="./images/Image7.jpeg" alt="" /></a>
-										<a href="./images/Image10.jpeg" class="image filtered span-3" data-position="top"><img src="./images/Image10.jpeg" alt="" /></a>
+										<a href="./images/Image14.jpeg" class="image filtered span-3" data-position="top"><img src="./images/Image14.jpeg" alt="" /></a>
 									</div>
 									<a href="./images/Image4.jpeg" class="image filtered span-2-5" data-position="right"><img src="./images/Image4.jpeg" alt="" /></a>
 								</div>
