--- a/MilindBirthday/index.html
+++ b/MilindBirthday/index.html
@@ -38,8 +38,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h2 class="major">"Kuch Fun Khaayein?"</h2>
+									<p>Did I mention about my other venture already? I am also the CEO @ "Kuch Fun Khaayein?" Although headquartered at Jaipur, we recently opened another branch in LA recently. From gobhi ki sabzi to garlic ki chutney, we have got everything covered. Apply code "SPICY" to get 20% flat off on all orders. Extra 10% if you add the keyword "EXTRA" before "SPICY".</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
