--- a/MilindBirthday/index.html
+++ b/MilindBirthday/index.html
@@ -39,7 +39,8 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">"Kuch Fun Khaayein?"</h2>
-									<p>Did I mention about my other venture already? I am also the CEO @ "Kuch Fun Khaayein?" Although headquartered at Jaipur, we recently opened another branch in LA recently. From gobhi ki sabzi to garlic ki chutney, we have got everything covered. Apply code "SPICY" to get 20% flat off on all orders. Extra 10% if you add the keyword "EXTRA" before "SPICY".</p>
+									<p>Did I mention about my other venture already? I am also the CEO @ "Kuch Fun Khaayein?" Although headquartered at Jaipur, we recently opened another branch in LA, CA. From gobhi ki sabzi to garlic ki chutney, we have got everything covered. Apply code "SPICY" to get 20% flat off on all orders. Extra 10% if you add the keyword "EXTRA" before "SPICY".</p>
+									<p>**Hamare yahan shaadi aur party ke order bhi book kiye jaate hain**</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
@@ -49,17 +50,17 @@
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Amet lorem</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">Upcoming Venture....</h2>
+									<p>Introducing... (cue dramatic music)... my photography talent! That's right, folks, I've got a knack for capturing the perfect shot, whether it's a stunning landscape, a hilarious candid moment, or a glamorous portrait.I've got an eye for detail, and a complete lack of shame when it comes to striking ridiculous poses to get that perfect shot. Auction for the first set of my pictures go live on 15th April, with a base price of $500k. See you soon at the bidding table!</p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
-										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
-										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+										<li><span class="icon fa-gem"><span class="label"></span></span></li>
+										<li><span class="icon solid fa-camera-retro"><span class="label"></span></span></li>
+										<li><span class="icon solid fa-cog"><span class="label"></span></span></li>
+										<li><span class="icon solid fa-paper-plane"><span class="label"></span></span></li>
+										<li><span class="icon solid fa-chart-bar"><span class="label"></span></span></li>
+										<li><span class="icon solid fa-code"><span class="label"></span></span></li>
 									</ul>
 								</div>
 							</section>
