--- a/MilindBirthday/index.html
+++ b/MilindBirthday/index.html
@@ -69,7 +69,11 @@
 							<section class="panel spotlight left">
 								<div class="content span-5">
 									<h2 class="major">Message from the CEO's office</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+									<p>Happy birthday shruti ke perman, yatharth ka roomie and mera junk food partner. You are turning 23 but still act like 3 year old with all your tantrums and childish jokes. You have an amazing taste in 2 things. 2nd is food of-course. (PS: galat mat soch, 1st is shoes). Speaking of which, I hope tu itne shoes le ki tu dukaan khol sake 😛. 
+										Wishing you all the success in life and may you reach the sky.</p>
+									<p>~T</p>
+									<p>Namaste Milind ji , I promised you ki me ek din sahise se BAAT karungi. So here it is Milind ji 🫶🏻 mere cute se perman kya likhu tere bareme tu nahi hota toh toh me nahi hoti ye Ghar me 🥹 jyada filmy ho Raha but sun le Teri tarif ek din bas.Terese baat Karne se jyada jhadgadne me maza atay. Tu shant hotay toh Mera dimag bhi shant ho jatay Teri badbad ki and tere mere ajubajume hone ki habit si ho gayi hai doll hai tu Meri 🫶🏻. Happy birthday mere chomu chapet . Thank you for always being there in my thick and thin. Thank you for making me the best gobhi , bhindi ,Chile and rooti . Thank you for always feeding me. Hope you achieve all your dreams. 👾</p>
+									<p>~ Your cutest Moti👾</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
@@ -111,6 +115,7 @@
 										May your wishes all come true,
 										And may your life be filled with blessings,
 										And all the joy that's due to you.</p>
+									<p>~ Y</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
